--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -132,6 +132,191 @@ $lightGreen : #b9e7e7;
         }
 
 
+        // HOME
+
+        .home{
+
+            .posts{
+                margin-top: 50px;
+                display: flex;
+                flex-direction: column;
+                gap: 150px;
+
+                .post{
+                    display: flex;
+                    gap: 100px;
+                    &:nth-child(2n+1){
+                        flex-direction: row-reverse;
+                    }
+
+                    .img{
+                        flex: 2;
+                        position: relative;
+
+                        &::after{
+                            content: "";
+                            width: 100%;
+                            height: 250px;
+                            background-color: $lightGreen;
+                            position: absolute;
+                            top: 10px;
+                            left: -10px;
+                            z-index: -1;
+                        }
+ 
+                        img{
+                            width: 100%; 
+                            max-height: 250px;
+                            object-fit: cover;
+                        }
+                    }
+
+                    .content{
+                        flex: 3;
+                        display: flex;
+                        justify-content: space-between;
+                        flex-direction: column;
+                        
+                        h1{
+                            font-size: 48px;
+                            line-height: 50px;
+                        }
+
+                        p{
+                            font-size: 18px;
+                            margin-top: 20px;
+                        }
+                        
+                        button{
+                            width: max-content;
+                            padding: 10px 20px;
+                            border: none;
+                            cursor: pointer;
+                            color: teal;
+                            background-color: white;
+                            border: 1px solid teal;
+                            margin-top: 20px;
+
+                            &:hover{
+                                background-color: $lightGreen;
+                                color: black;
+                                border: 1px solid white;
+                            }
+                        }
+                    }
+
+                }
+            
+
+            }
+        }
+
+        //SINGLE
+
+        .single{
+            display: flex;
+            gap: 50px;
+
+            .content{
+                flex:5;
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+
+                img{
+                    width: 100%;
+                    height: 300px;
+                    object-fit: cover; 
+                }
+                .user{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    font-size: 14px;
+                    
+                    
+                    img{
+                        width: 50px;
+                        height: 50px;
+                        border-radius: 50%;
+                        object-fit: cover;
+                    }
+
+                    span{
+                        font-weight: bolder;
+                    }
+
+                    .edit{
+                        display: flex;
+                        gap:5px;
+                        img{
+                            width: 20px;
+                            height: 20px;
+                        }
+                    }
+
+
+                }
+
+                h1{
+                    
+                    color: #555;
+                    font-size: 42px;
+                }
+                p{
+                    text-align: justify;
+                    line-height: 30px;
+                }
+            }
+
+
+
+            .menu{
+                flex:2;
+                display: flex;
+                flex-direction: column;
+                gap: 25px;
+                
+                h1{
+                    font-size: 20px;
+                    color: #555;
+                }
+
+                .post{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+
+                    img{
+                        width: 100%;
+                        height: 200px;
+                        object-fit: cover;
+                    }
+
+                    h2{
+                        color: #555;
+                    }
+
+                    button{
+                        width: max-content;
+                        padding: 7.5px 15px;
+                        border: none;
+                        cursor: pointer;
+                        color: teal;
+                        background-color: white;
+                        border: 1px solid teal;
+                    
+
+                        &:hover{
+                            background-color: $lightGreen;
+                            color: black;
+                            border: 1px solid white;
+                        }
+                    }
+                }
+            }
+        }
+
     }
 
 
