--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -76,7 +76,7 @@ $lightGreen : #b9e7e7;
             .logo{
 
                 img{
-                    width: 120px;
+                    width: 90px;
                 }
 
             }
@@ -317,6 +317,25 @@ $lightGreen : #b9e7e7;
             }
         }
 
+                    //WRITE
+
+                    .add{
+                        margin-top: 20px;
+                        gap: 20px;
+                        display: flex;
+        
+                        .content{
+                            flex: 5;
+                        
+                        }
+        
+                        .menu{
+                            flex: 2;
+                            display: flex;
+                            flex-direction: column;
+                            gap: 20px;
+                        }
+                    }
     }
 
 
